# edututor-core

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyproject.toml.backup
.github/workflows/: ci.yml
src/edututor/: app.py
src/edututor/core/: classifiers.py  orchestrator.py  policy.py  sanitizer.py  templates.py
src/edututor/llm/: __init__.py  base.py  mock.py  openai_provider.py
src/edututor/persistence/: db.py  store.py
tests/: test_classifier.py  test_classifiers_extra.py  test_mock.py  test_orchestrator.py  test_persistence.py  test_policy.py  test_sanitizer.py
