[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edututor"
version = "0.1.0"
description = "EduTutor MVP: explain, debug, and guide — never write the code."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Abhilash", email = "abhilashkumargiri63@gmail.com" }
]
dependencies = [
    "pyside6>=6.6",
    "python-dotenv>=1.0",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "black>=24.4.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
    "types-requests>=2.32",
    "pre-commit>=3.7.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E203"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true


# Simple approach - just ignore all PySide6 modules
["mypy-PySide6.*"]
ignore_missing_imports = true
